# tagmp3

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  TODO  build_deps.sh  find-empty-titles.sh  main.c  main.cpp  readme.md  set_version.sh  version.cpp  version.h  version.template
test/: help.expected  p.expected  test.sh
